--- a/css/style.css
+++ b/css/style.css
@@ -33,18 +33,6 @@ img{
     width: 100%;
 }
 
-body::-webkit-scrollbar {
-    width: 12px;               /* ширина scrollbar */
-  }
-  body::-webkit-scrollbar-track {
-    background: var(--light-color);        /* цвет дорожки */
-  }
-  body::-webkit-scrollbar-thumb {
-    background-color: var(--light-color);    /* цвет плашки */
-    border-radius: 20px;       /* закругления плашки */
-    border: 3px solid var(--text-color);  /* padding вокруг плашки */
-  }
-
 /* body */
 body{
     color: var(--text-color);
@@ -549,4 +537,27 @@ header{
     background: var(--light-color);
     transition: all 0.0s linear;
     clip-path: polygon(0 0, 100% 0%, 100% 100%, 10% 100%, 0% 68%);
+}
+
+.new{
+    margin-top: 2rem;
+}
+/* scroll */
+html::-webkit-scrollbar{
+    display: none;
+}
+/* custom-scroll-bar */
+.progress{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    z-index: 300;
+}
+
+.progress-bar{
+    height: 4px;
+    background: var(--main-color);
+    width: 0%;
 }
